--- a/register.html
+++ b/register.html
@@ -18,13 +18,35 @@
   <!-- iCheck -->
   <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
 
-
+<style>
+.help {
+    display:none;
+    font-size:90%;
+}
+input:focus + .help {
+    display:inline-block;
+}
+</style>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <!-- <script type="text/javascript">
+function validateForm(){
+  var name=document.forms["form2"]["fullname"].value;
+var pattern = /^[a-zA-Z ]+$/i;
+if (!pattern.test(fullname)){
+alert("Invalid  Name");
+return false;
+}
+}
+
+
+
+
+  </script> -->
 </head>
 <body class="hold-transition register-page">
 <div class="register-box">
@@ -35,17 +57,18 @@
   <div class="register-box-body">
     <p class="login-box-msg">Registration</p>
 
-    <form action="register.php" method="post">
+    <form action="register.php" name="form2" method="post">
       <div class="form-group has-feedback">
-        <input type="text" name="fullname" class="form-control" placeholder="Full name" required="yes">
-        <span class="glyphicon glyphicon-user form-control-feedback"></span>
+        <input type="text" name="fullname" class="form-control" placeholder="Full name"  aria-describedby="name-format" required aria-required=”true” pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+"  title="firstname lastname" id="fullname" >
+        <!-- <span class="glyphicon glyphicon-user form-control-feedback"></span> -->
+         <span id="fullname" class="help">Format: firstname lastname</span>
       </div>
       <div class="form-group has-feedback">
         <input type="email" name="email" class="form-control" placeholder="Email" required="yes">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" name="password" class="form-control" id="password" placeholder="Password"   required="yes">
+        <input type="password" name="password" class="form-control" id="password" placeholder="Password"    required="yes">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <!-- <div class="form-group has-feedback">
@@ -53,11 +76,11 @@
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span><span id="message"></span>
       </div> -->
       <div class="form-group has-feedback">
-        <textarea class="form-control" name="address" placeholder="Address" required="yes"></textarea>
+        <textarea class="form-control" name="address" placeholder="Address" required="yes" id="address"></textarea>
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="number" name="phone" class="form-control" placeholder="phonenumber" maxlength="10" required="yes">
+        <input type="number" name="phone" id="phone" class="form-control" placeholder="phonenumber" aria-describedby="phone-format" required aria-required=”true” pattern="\d{10}" maxlength="10">
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="row">
@@ -70,7 +93,7 @@
         </div> -->
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" name="submit" id="submit" class="btn btn-primary btn-block btn-flat">Register</button><a href="index.php">Login</a><br>
+          <button type="submit" name="submit" id="submit"  class="btn btn-primary btn-block btn-flat">Register</button><a href="index.php">Login</a><br>
         </div>
         <!-- /.col -->
       </div>
