changed and added the qrcode

--- a/register.html
+++ b/register.html
@@ -68,6 +68,10 @@ return false;
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
+        <input type="text" name="rest_name" class="form-control" placeholder="Restaruant name" required="yes">
+        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+      </div>
+      <div class="form-group has-feedback">
         <input type="password" name="password" class="form-control" id="password" placeholder="Password"    required="yes">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
